# redezero

./: Dockerfile  LICENSE  README.md  compose.yml  mypy.ini  pyproject.toml
.devcontainer/: devcontainer.json
redezero/: __init__.py  _backprop_utils.py  configuration.py  function.py  types.py  utils.py  variable.py
redezero/functions/: __init__.py
redezero/functions/activation/: tanh.py
redezero/functions/array/: broadcast.py  reshape.py  transpose.py
redezero/functions/math/: basic_math.py  matmul.py  sum.py  trigonometric.py
redezero/utils/: __init__.py  array.py  plot.py
tests/: test__backprop_utils.py  test_function.py  test_utils.py  test_variable.py
tests/functions/activation/: test_tanh.py
tests/functions/array/: test_broadcast.py  test_reshape.py  test_transpose.py
tests/functions/math/: test_basic_math.py  test_matmul.py  test_sum.py  test_trigonometric.py
tests/utils/: test_array.py  test_plot.py
