[tool.poetry]
name = "redezero"
version = "0.0.13"
description = "ReDeZero: Re-implement DeZero framework for learning purpose"
license = "MIT License"
authors = ["pphos"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"
autopep8 = "^1.7.0"
flake8 = "^5.0.4"
pytest = "^7.1.2"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"